# Antigravity

./: .env.example  .gitignore  Makefile  README.md  curriculum_fullstack_ai.md  pyproject.toml
.agents/workflows/: dojo.md
IA Generativa/src/: ingest_metadata.ipynb
backend/agents/: financial_analyst.py
backend/api/: __init__.py  main.py  routes_chat.py  routes_empresas.py  routes_mercado.py  schemas.py
backend/db/: __init__.py  conexion.py  modelos.py
backend/etl/: cargar_datos.py
backend/practice/: README.md  mi_conexion.py
backend/rag/: embeddings.py  retriever.py
backend/tools/: __init__.py  analysis_tool.py  news_tool.py  sql_tool.py
frontend/: AGENTS.md  README.md
frontend/src/app/: page.tsx
